# EscapeWatch

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: checks.md
examples/: sample_report.json  sample_report.sarif  sample_terminal_output.txt
src/escapewatch/: cli.py  environment.py  models.py  runner.py
src/escapewatch/checks/: __init__.py  base.py  chains.py  cloud.py  filesystem.py  kernel.py  kubernetes.py  namespaces.py  privileges.py  runtime_versions.py  sockets.py
src/escapewatch/formatters/: __init__.py  json_fmt.py  sarif_fmt.py  terminal_fmt.py
